Config updates: /module tools (#96)
Team lift for modular approach.

---------

Signed-off-by: Chris <atnl@protonmail.com>
Signed-off-by: 4nt1 <64175868+4nt11@users.noreply.github.com>
Signed-off-by: Tim Burns <92951498+OpenSource-For-Freedom@users.noreply.github.com>
Co-authored-by: LinuxUser255 <atnl@protonmailcom>
Co-authored-by: Chris <atnl@protonmail.com>
Co-authored-by: 4nt1 <64175868+4nt11@users.noreply.github.com>
Co-authored-by: Samuel P. <samsam70000@gmail.com>
Co-authored-by: opensource-for-freedom <timothydaniel14@yaho.com>

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "jumpsecurity" ]
   schedule:
     - cron: '39 23 * * 6'  # Weekly on Saturday
 
@@ -70,6 +70,7 @@ jobs:
         uses: returntocorp/semgrep-action@v1
         with:
           config: "auto"
+          publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
           output: "semgrep-report.sarif"
           format: "sarif"
       - name: Upload Semgrep Report
@@ -77,3 +78,4 @@ jobs:
         with:
           name: semgrep-report
           path: semgrep-report.sarif
+
