--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 #secrets
 .env
 TODO
+
+# Debian package build artifacts
+debian/.debhelper/
+debian/debhelper-build-stamp
+debian/files
+debian/*.substvars
+debian/hardn/
+*.deb
+*.dsc
+*.changes
+*.tar.xz
+*.buildinfo
