--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,11 @@
 #!/usr/bin/make -f
-
 %:
-	chmod +x src/setup/hardn-main.sh src/setup/modules/*.sh install.sh hardn-xdr
 	dh $@
+
+override_dh_install:
+	dh_install
+
+
+	chmod +x debian/hardn-xdr/usr/share/hardn/hardn-main.sh
+	chmod +x debian/hardn-xdr/usr/share/hardn/install.sh
+	chmod +x debian/hardn-xdr/usr/share/hardn/modules/*.sh
