--- a/.github/workflows/version-control.yml
+++ b/.github/workflows/version-control.yml
@@ -31,7 +31,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+      - name: ensure postinst is exe
+        run: chmod +x debian/postinst
       - name: Fetch all tags
         run: git fetch --tags
 
