--- a/.github/workflows/version-control.yml
+++ b/.github/workflows/version-control.yml
@@ -18,7 +18,7 @@ jobs:
   build-and-test:
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-24.04, debian-12]
+        os: [debian-12]
         arch: [amd64, arm64]
     runs-on: ${{ matrix.os }}
 
