--- a/debian/control
+++ b/debian/control
@@ -21,15 +21,12 @@ Package: hardn
 Architecture: any
 Pre-Depends: bash
 Depends: ${misc:Depends},
- auditd, audispd-plugins, suricata, fail2ban, rkhunter, chkrootkit,
- unhide, debsums, lynis, clamav, clamav-daemon, clamav-freshclam,
- yara, aide, aide-common, rsyslog, logrotate, needrestart,
- apt-listchanges, apt-listbugs, unattended-upgrades, apt-transport-https,
- ca-certificates, software-properties-common, lsb-release, gnupg,
- openssh-server, openssh-client, ufw, systemd-timesyncd,
- apparmor, apparmor-profiles, apparmor-utils, firejail,
- libpam-pwquality, libpam-google-authenticator, libpam-tmpdir,
- curl, wget, lsof, psmisc, procps, git
+ auditd, audispd-plugins, suricata, fail2ban, rkhunter, chkrootkit, unhide, debsums, lynis,
+ clamav, clamav-daemon, clamav-freshclam, yara, aide, aide-common, rsyslog, logrotate,
+ needrestart, apt-listchanges, apt-listbugs, unattended-upgrades, apt-transport-https,
+ ca-certificates, software-properties-common, lsb-release, gnupg, openssh-server, openssh-client,
+ ufw, systemd-timesyncd, apparmor, apparmor-profiles, apparmor-utils, firejail,
+ libpam-pwquality, libpam-google-authenticator, libpam-tmpdir, curl, wget, lsof, psmisc, procps, git
 Description: Linux Security Hardening Extended Detection and Response
  HARDN is a comprehensive Linux security hardening and endpoint defense toolkit.
  It integrates auditing tools, antivirus scanners, system integrity checkers,
