--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,10 +9,6 @@ permissions:
   contents: write
   issues: write
   pull-requests: write
-  statuses: write
-  checks: write
-  deployments: write
-  discussions: write
 
 jobs:
   build-and-test:
@@ -23,7 +19,6 @@ jobs:
       max-parallel: 1
     outputs:
       new_tag: ${{ steps.bump.outputs.new_tag }}
-      deb_out: ${{ steps.rename.outputs.deb_out }}
 
     steps:
       - name: Checkout repository
@@ -39,9 +34,7 @@ jobs:
         id: get_tag
         run: |
           latest_tag=$(git tag -l "v1.1.*" --sort=-v:refname | head -n 1)
-          if [ -z "$latest_tag" ]; then
-            latest_tag="v1.1.0"
-          fi
+          [ -z "$latest_tag" ] && latest_tag="v1.1.0"
           echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
 
       - name: Extract patch version and bump
@@ -55,48 +48,46 @@ jobs:
           echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
 
       - name: Install build dependencies
-        run: sudo apt-get update && sudo apt-get install -y dpkg-dev debhelper fakeroot build-essential devscripts lintian gnupg whiptail
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y dpkg-dev debhelper fakeroot build-essential devscripts lintian gnupg whiptail
 
       - name: Build Debian package
         run: |
           export DEB_BUILD_ARCH=${{ matrix.arch }}
           dpkg-buildpackage -us -uc
 
-      - name: List built .deb files (debug)
-        run: |
-          echo "Contents of parent dir:"
-          ls -lh ..
-          echo "Contents of workspace:"
-          ls -lh .
-
-      - name: Rename and move .deb into workspace
+      - name: Rename and move .deb
         id: rename
         run: |
-          full_tag="${{ steps.bump.outputs.new_tag }}"
-          version="${full_tag#v}"
+          version="${{ steps.bump.outputs.new_tag#v }}"
           arch="${{ matrix.arch }}"
           deb_file=$(ls ../*.deb | head -n 1)
-          if [ ! -f "$deb_file" ]; then
-            echo "::error ::No .deb file found. Package build may have failed."
-            exit 1
-          fi
+          [ ! -f "$deb_file" ] && echo "::error ::No .deb file found." && exit 1
           new_name="hardn_${version}_${arch}.deb"
           mv "$deb_file" "./$new_name"
-          echo "deb_out=${{ github.workspace }}/${new_name}" >> $GITHUB_OUTPUT
+          echo "deb_file=$new_name" >> $GITHUB_OUTPUT
 
-      - name: Run test container with .deb and capture logs
+      - name: Upload .deb artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: deb-${{ matrix.arch }}
+          path: ${{ steps.rename.outputs.deb_file }}
+
+      - name: Run test container with .deb
         run: |
-          docker run --rm -v "${{ steps.rename.outputs.deb_out }}:/tmp/hardn.deb" debian:stable-slim bash -c '
+          docker run --rm -v "$(pwd)/${{ steps.rename.outputs.deb_file }}:/tmp/hardn.deb" debian:stable-slim bash -c '
+            set -euo pipefail
             apt-get update &&
             apt-get install -y whiptail sudo gnupg &&
-            dpkg -i /tmp/hardn.deb || apt-get install -f -y &&
+            dpkg -i /tmp/hardn.deb || (apt-get install -f -y && dpkg -i /tmp/hardn.deb) &&
             echo "--- Installed Package Contents ---" &&
             dpkg -L hardn &&
             echo "--- Running hardn-xdr ---" &&
             sudo hardn-xdr || echo "hardn-xdr run failed"
           ' | tee hardn-execution.log
 
-      - name: Upload HARDN execution log
+      - name: Upload test log
         if: always()
         uses: actions/upload-artifact@v4
         with:
@@ -106,7 +97,6 @@ jobs:
   tag-and-release:
     needs: build-and-test
     runs-on: ubuntu-latest
-    if: needs.build-and-test.outputs.deb_out != ''
 
     steps:
       - name: Checkout code
@@ -114,20 +104,31 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Fetch all tags
+      - name: Fetch tags
         run: git fetch --tags
+
+      - name: Download .deb artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: deb-amd64
+          path: .
 
       - name: Create and push new tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag "${{ needs.build-and-test.outputs.new_tag }}" -m "Release ${{ needs.build-and-test.outputs.new_tag }}"
-          git push origin "${{ needs.build-and-test.outputs.new_tag }}"
+          tag="${{ needs.build-and-test.outputs.new_tag }}"
+          if git rev-parse "$tag" >/dev/null 2>&1; then
+            echo "Tag already exists, skipping"
+          else
+            git tag "$tag" -m "Release $tag"
+            git push origin "$tag"
+          fi
 
-      - name: Upload release asset
+      - name: Create GitHub Release and upload .deb
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ needs.build-and-test.outputs.new_tag }}
           name: "Release ${{ needs.build-and-test.outputs.new_tag }}"
           body: "Automated release for version ${{ needs.build-and-test.outputs.new_tag }}"
-          files: ${{ needs.build-and-test.outputs.deb_out }}
+          files: ./hardn_*.deb
