--- a/debian/control
+++ b/debian/control
@@ -27,9 +27,9 @@ Depends: ${misc:Depends},
  ufw, systemd-timesyncd, apparmor, apparmor-profiles, apparmor-utils, firejail,
  libpam-pwquality, libpam-google-authenticator, libpam-tmpdir, curl, wget, lsof, psmisc, procps, git,
 Description: Linux Security Hardening Extended Detection and Response
- HARDN is a comprehensive Linux security hardening and endpoint defense toolkit.
- It integrates auditing tools, antivirus scanners, system integrity checkers, and
- provides compliance with STIG security guidelines.
+ HARDN-XDR is a comprehensive Linux security hardening and endpoint defense toolkit.
+ It integrates auditing tools, antivirus scanners, system integrity checkers,
+ and provides compliance with STIG security guidelines.
  .
  Features:
   - Automated system hardening
