--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y dpkg-dev debhelper fakeroot build-essential devscripts lintian gnupg whiptail
+
       - name: Confirm install sources exist
         run: |
           for file in install.sh src/setup/hardn-main.sh hardn-xdr man/hardn-xdr.1; do
@@ -58,12 +59,9 @@ jobs:
           done
           [ -d src/setup/modules ] || { echo "::error ::Missing dir: src/setup/modules"; exit 1; }
           echo "All install targets are present."
-
-      - name: Set executable permissions
-        run: |
           chmod +x install.sh
           chmod +x hardn-xdr
-          chmod +x src/setup/modules/*.sh
+          find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
 
       - name: Show contents expected for packaging
         run: |
@@ -81,6 +79,7 @@ jobs:
           export DEB_BUILD_ARCH=${{ matrix.arch }}
           dpkg-buildpackage -us -uc
           sudo apt install -f
+
       - name: Inspect built .deb contents
         run: |
           deb=$(ls ../*.deb | head -n 1)
