--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        arch: [amd64]
+        arch: [amd64, arm64]
       max-parallel: 1
     outputs:
       new_tag: ${{ steps.bump.outputs.new_tag }}
@@ -55,24 +55,26 @@ jobs:
       - name: Confirm install sources exist
         run: |
           for file in install.sh src/setup/hardn-main.sh hardn-xdr man/hardn-xdr.1; do
-          [ -f "$file" ] || { echo "::error ::Missing file: $file"; exit 1; }
+            [ -f "$file" ] || { echo "::error ::Missing file: $file"; exit 1; }
           done
           [ -d src/setup/modules ] || { echo "::error ::Missing dir: src/setup/modules"; exit 1; }
           echo "All install targets are present."
-          chmod +x install.sh
-          chmod +x hardn-xdr
-          find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
 
-      - name: Show contents expected for packaging
+      - name: Set executable permissions for packaging
         run: |
-          echo "Checking install.sh:"
-          ls -lh install.sh
-          echo "Checking hardn-xdr:"
-          ls -lh hardn-xdr
-          echo "Checking hardn-main.sh:"
-          ls -lh src/setup/hardn-main.sh
-          echo "Checking modules:"
-          ls -l src/setup/modules
+          echo "[+] Marking install entry points as executable..."
+          chmod +x install.sh || { echo "::error ::install.sh not found or not executable"; exit 1; }
+          chmod +x hardn-xdr || { echo "::error ::hardn-xdr not found or not executable"; exit 1; }
+          chmod +x src/setup/hardn-main.sh || { echo "::error ::hardn-main.sh not found"; exit 1; }
+          find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
+          echo "[✓] Executable permissions set successfully."
+
+      - name: Update changelog with new version
+        run: |
+          version="${{ steps.bump.outputs.new_tag }}"
+          version="${version#v}"
+          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
+          dch --release --force-distribution ""
 
       - name: Build Debian package
         run: |
@@ -100,7 +102,7 @@ jobs:
 
       - name: Validate package with lintian
         run: |
-          lintian ${{ steps.rename.outputs.deb_file }} || echo "::info ::Lintian discovered issues"
+          lintian ${{ steps.rename.outputs.deb_file }}
 
       - name: Upload .deb artifact
         uses: actions/upload-artifact@v4
@@ -120,7 +122,7 @@ jobs:
           apt-get install -y sudo gnupg
           dpkg -i /tmp/hardn.deb || (apt-get install -f -y && dpkg -i /tmp/hardn.deb)
           echo "--- Installed Package Contents ---"
-          dpkg -L hardn
+          dpkg -L hardn-xdr || true
           echo "--- Running hardn-xdr ---"
           sudo SKIP_WHIPTAIL=1 hardn-xdr || echo "hardn-xdr run failed"
           ' | tee hardn-execution.log
@@ -129,7 +131,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: hardn-test-log
+          name: hardn-test-log-${{ matrix.arch }}
           path: hardn-execution.log
 
   tag-and-release:
