--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
         run: |
           echo "[+] Marking install entry points as executable..."
           chmod +x install.sh || { echo "::error ::install.sh not found or not executable"; exit 1; }
+          chmod +x debian/postinst || { echo "::error ::postinst not found or not executable"; exit 1; }
           chmod +x hardn-xdr || { echo "::error ::hardn-xdr not found or not executable"; exit 1; }
           chmod +x src/setup/hardn-main.sh || { echo "::error ::hardn-main.sh not found"; exit 1; }
           find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
