--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,10 +63,10 @@ jobs:
       - name: Set executable permissions for packaging
         run: |
           echo "[+] Marking install entry points as executable..."
-          chmod +x install.sh || { echo "::error ::install.sh not found or not executable"; exit 1; }
-          chmod +x debian/postinst || { echo "::error ::postinst not found or not executable"; exit 1; }
-          chmod +x hardn-xdr || { echo "::error ::hardn-xdr not found or not executable"; exit 1; }
-          chmod +x src/setup/hardn-main.sh || { echo "::error ::hardn-main.sh not found"; exit 1; }
+          chmod +x install.sh
+          chmod +x hardn-xdr
+          chmod +x debian/postinst
+          chmod +x src/setup/hardn-main.sh
           find src/setup/modules -type f -name "*.sh" -exec chmod +x {} \;
           echo "[✓] Executable permissions set successfully."
 
@@ -88,6 +88,16 @@ jobs:
           deb=$(ls ../*.deb | head -n 1)
           echo "Package contents of $deb:"
           dpkg-deb -c "$deb"
+
+      - name: Verify postinst inclusion
+        run: |
+          deb=$(ls ../*.deb | head -n 1)
+          mkdir -p control_tmp
+          dpkg-deb --control "$deb" control_tmp
+          echo "--- Contents of control archive ---"
+          ls -l control_tmp
+          echo "--- postinst script content ---"
+          cat control_tmp/postinst || echo "::error ::postinst script is missing from .deb"
 
       - name: Rename and move .deb
         id: rename
@@ -123,9 +133,10 @@ jobs:
           apt-get install -y sudo gnupg
           dpkg -i /tmp/hardn.deb || (apt-get install -f -y && dpkg -i /tmp/hardn.deb)
           echo "--- Installed Package Contents ---"
-          dpkg -L hardn-xdr || true
+          dpkg -L hardn || true
           echo "--- Running hardn-xdr ---"
           sudo SKIP_WHIPTAIL=1 hardn-xdr || echo "hardn-xdr run failed"
+          cat /tmp/postinst.log || echo "No postinst.log found"
           ' | tee hardn-execution.log
 
       - name: Upload test log
