--- a/debian/control
+++ b/debian/control
@@ -19,56 +19,14 @@ Vcs-Browser: https://github.com/OpenSource-For-Freedom/HARDN-XDR
 
 Package: hardn
 Architecture: any
-Depends: ${misc:Depends},
-         bash,
-         whiptail,
-         debconf,
-         gnupg
-
-Recommends:
-         auditd,
-         audispd-plugins,
-         suricata,
-         fail2ban,
-         rkhunter,
-         chkrootkit,
-         unhide,
-         debsums,
-         lynis,
-         clamav,
-         clamav-daemon,
-         clamav-freshclam,
-         yara,
-         aide,
-         aide-common,
-         rsyslog,
-         logrotate,
-         needrestart,
-         apt-listchanges,
-         apt-listbugs,
-         unattended-upgrades,
-         ca-certificates,
-         software-properties-common,
-         lsb-release,
-         openssh-server,
-         openssh-client,
-         ufw,
-         systemd-timesyncd,
-         apparmor,
-         apparmor-profiles,
-         apparmor-utils,
-         firejail,
-         libpam-pwquality,
-         selinux,
-         libpam-google-authenticator,
-         libpam-tmpdir,
-         curl,
-         wget,
-         lsof,
-         psmisc,
-         procps,
-         git
-
+Depends: ${misc:Depends}, bash, whiptail, debconf, gnupg
+Recommends: auditd, audispd-plugins, suricata, fail2ban, rkhunter, chkrootkit,
+ unhide, debsums, lynis, clamav, clamav-daemon, clamav-freshclam, yara, aide,
+ aide-common, rsyslog, logrotate, needrestart, apt-listchanges, apt-listbugs,
+ unattended-upgrades, ca-certificates, software-properties-common, lsb-release,
+ openssh-server, openssh-client, ufw, systemd-timesyncd, apparmor,
+ apparmor-profiles, apparmor-utils, firejail, libpam-pwquality, selinux,
+ libpam-google-authenticator, libpam-tmpdir, curl, wget, lsof, psmisc, procps, git
 Description: Linux Security Hardening Extended Detection and Response
  HARDN is a comprehensive Linux security hardening and endpoint defense toolkit.
  It integrates auditing tools, antivirus scanners, system integrity checkers,
