--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,9 @@ jobs:
 
       - name: Validate package with lintian
         run: |
-          lintian ${{ steps.rename.outputs.deb_file }}
+          set -e
+          echo "Validating with lintian..."
+          lintian --fail-on error --info --display-info hardn_*.deb
 
       - name: Upload .deb artifact
         uses: actions/upload-artifact@v4
