--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper-compat (= 13),
                fakeroot,
                build-essential,
                python3,
-               bash (>= 5.0)
+               bash (>= 5.0),
                whiptail,
                debconf
 Standards-Version: 4.6.2
