--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -184,3 +184,19 @@ jobs:
           name: "Release ${{ needs.build-and-test.outputs.new_tag }}"
           body: "Automated release for version ${{ needs.build-and-test.outputs.new_tag }}"
           files: ./hardn_*.deb
+      - name: Update changelog with new version
+        run: |
+          version="${{ steps.bump.outputs.new_tag }}"
+          version="${version#v}"
+          export DEBFULLNAME="Tim Burns"
+          export DEBEMAIL="cyborgcreations01@gmail.com"
+          dch --newversion "$version" "Automated release $version" --distribution unstable --force-distribution
+          dch --release --force-distribution ""
+
+      - name: Commit updated changelog
+        run: |
+         git config user.name "github-actions[bot]"
+         git config user.email "github-actions[bot]@users.noreply.github.com"
+         git add debian/changelog
+         git commit -m "chore: update debian changelog for ${{ steps.bump.outputs.new_tag }}" || echo "No changes to commit"
+         git push origin main
